Fixed alignment of author info

--- a/css/post-grid.css
+++ b/css/post-grid.css
@@ -22,6 +22,7 @@
   grid-row: 3;
   margin: 20px;
   height: auto;
+  align-self: start;
 }
 
 #author-info img{
@@ -53,6 +54,11 @@
   margin: 20px;
   grid-row: 5;
 
+}
+
+.social-share {
+  background-color: #b1a296;
+  margin:0px;
 }
 
 .card {
